--- a/index.html
+++ b/index.html
@@ -4,9 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Payments</title>
 </head>
 <body>
-    
+    <div id="header">
+        <h1>Payments</h1>
+        <p style="color: #666; font-weight: lighter;">Add ways to receive payments. <a target="_blank" alt="This link redirects to learn more about payment methods." href="payments/LearnMore" style="color: #666; border-bottom: 2px solid #666; text-decoration: none">Learn More</a></p>
+    </div>
+    <div>
+        <h2>Payment providers</h2>
+    </div>
+    <div id="main" >
+        <div id="stripe" class="paybox">
+            <div>
+                <img src="/images/stripe-logo.png" class="responsive" width="110px" height="55px" alt="stripe logo">
+                <p>Connect Stripe to let customers pay with all major credit cards and Apple Pay</p>
+            </div>
+            <div>
+                <button id="stripe_button" type="button" alt="Stripe payment connect button for credit cards and Apple Pay"><a target="_blank" href="" style="color: #fff; text-decoration:none">Connect</a></button>
+            </div>
+        </div>
+        <div id="paypal" class="paybox">
+            <div>
+                <!-- I created a PayPal logo that more closely that matched tho one in the design file as the provided logo was different -->
+                <img src="/images/PayPal logo3.png" class="responsive" width="200px" Height="50px" alt="paypal logo">
+                <p>Connect Paypal Business to let customers pay with a PayPal or Venmo account</p>    
+            </div>
+            <div>
+                <button id="paypal_button" type="button" alt="PayPal and Venmo payment connect button"><a target="_blank" href="" style="color: #000; text-decoration:none">Connect</a></button>
+            </div>
+        </div>
+    </div>    
 </body>
 </html>
