--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="main" >
         <div id="stripe" class="paybox">
             <div>
-                <img src="/images/stripe-logo.png" class="responsive" width="110px" height="55px" alt="stripe logo">
+                <img src="./images/stripe-logo.png" class="responsive" width="110px" height="55px" alt="stripe logo">
                 <p>Connect Stripe to let customers pay with all major credit cards and Apple Pay</p>
             </div>
             <div>
@@ -28,7 +28,7 @@
         <div id="paypal" class="paybox">
             <div>
                 <!-- I created a PayPal logo that more closely that matched tho one in the design file as the provided logo was different -->
-                <img src="/images/PayPal logo3.png" class="responsive" width="200px" Height="50px" alt="paypal logo">
+                <img src="./images/PayPal logo3.png" class="responsive" width="200px" Height="50px" alt="paypal logo">
                 <p>Connect Paypal Business to let customers pay with a PayPal or Venmo account</p>    
             </div>
             <div>
